--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
-    <!-- Required for foreground services on P+. -->
+    xmlns:tools="http://schemas.android.com/tools"
+    package="de.ticktrax.ticktrax_geo">
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
-    <!-- TODO: Step 1.0, Review Permissions: Specify permissions you are using. -->
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"
-
-        tools:ignore="CoarseFineLocation" />
     <application
+        android:name="de.ticktrax.de.ticktrax.ticktrax_geo.location.LocationApp"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -18,12 +19,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TickTrax_GEO"
         tools:targetApi="31">
+        <service android:name="de.ticktrax.de.ticktrax.ticktrax_geo.location.LocationService" android:foregroundServiceType="location" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
