versuch die flattenfactory einzubauen

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,8 +66,10 @@ dependencies {
     //Retrofit
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
-    implementation 'com.squareup.moshi:moshi-kotlin:1.15.0'
-    implementation("com.squareup.retrofit2:converter-scalars:2.9.0")
+    // changed from moshi to gson
+//    implementation 'com.squareup.moshi:moshi-kotlin:1.15.0'
+    implementation "com.google.code.gson:gson:2.8.5"
+    implementation "com.squareup.retrofit2:converter-scalars:2.9.0"
 
     // Coil
     implementation 'io.coil-kt:coil:2.4.0'
