--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,7 +68,8 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-moshi:2.9.0"
     // changed from moshi to gson
 //    implementation 'com.squareup.moshi:moshi-kotlin:1.15.0'
-    implementation "com.google.code.gson:gson:2.8.5"
+    implementation 'com.squareup.retrofit2:converter-gson:2.2.0'
+
     implementation "com.squareup.retrofit2:converter-scalars:2.9.0"
 
     // Coil
