--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,9 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
 
     <application
         android:name="de.ticktrax.de.ticktrax.ticktrax_geo.location.LocationApp"
@@ -19,7 +22,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TickTrax_GEO"
         tools:targetApi="31">
-        <service android:name="de.ticktrax.de.ticktrax.ticktrax_geo.location.LocationService" android:foregroundServiceType="location" />
+        <service
+            android:name="de.ticktrax.de.ticktrax.ticktrax_geo.location.LocationService"
+            android:foregroundServiceType="location" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -28,6 +33,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.your.package.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_path" />
+        </provider>
     </application>
-
 </manifest>
