--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,7 +85,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:19.0.1'
     implementation 'com.google.android.material:material:1.9.0'
 
-
+    implementation 'com.google.android.gms:play-services-oss-licenses:17.0.1'
 
 
 }
