--- a/build.gradle
+++ b/build.gradle
@@ -3,11 +3,17 @@ buildscript {
     ext {
         nav_version = "2.5.3"
     }
+    repositories {
+        google()
+    }
     dependencies {
         classpath("androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version")
         classpath 'com.google.gms:google-services:4.3.15'
+        classpath 'com.google.android.gms:oss-licenses-plugin:0.10.6'
+
     }
 }
+
 
 plugins {
     id 'com.android.application' version '8.1.0' apply false
