--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,8 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'androidx.navigation.safeargs.kotlin'
     id 'kotlin-kapt'
+    id 'com.google.android.gms.oss-licenses-plugin'
+
 }
 apply plugin: 'kotlin-android'
 
@@ -86,6 +88,6 @@ dependencies {
     implementation 'com.google.android.material:material:1.9.0'
 
     implementation 'com.google.android.gms:play-services-oss-licenses:17.0.1'
-
+    implementation "com.jakewharton.threetenabp:threetenabp:1.3.0"
 
 }
