--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,5 +89,6 @@ dependencies {
 
     implementation 'com.google.android.gms:play-services-oss-licenses:17.0.1'
     implementation "com.jakewharton.threetenabp:threetenabp:1.3.0"
+    implementation "org.osmdroid:osmdroid-android:$osm_droid_version"
 
 }
