--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,4 +91,6 @@ dependencies {
     implementation "com.jakewharton.threetenabp:threetenabp:1.3.0"
     implementation "org.osmdroid:osmdroid-android:$osm_droid_version"
 
+    implementation 'org.apache.poi:poi:5.0.0'
+    implementation 'org.apache.poi:poi-ooxml:5.0.0'
 }
